--- a/aroma-installer/examples/release/META-INF/com/google/android/aroma/changelog.txt
+++ b/aroma-installer/examples/release/META-INF/com/google/android/aroma/changelog.txt
@@ -1,3 +1,7 @@
+<b><#selectbg_g>CEMPAKA - 1.64 - BUILD 120414-040</#></b>
+<*>Fix framebuffer mmap size</*>
+<*>Fix status 0 error</*>
+
 <b><#selectbg_g>CEMPAKA - 1.63 - BUILD 120306-32</#></b>
 <*>Fix Memory leaks</*>
 <*>add ini_set("force_colorspace","rgba");</*>
