--- a/assets/META-INF/com/google/android/aroma/langs/el.lang
+++ b/assets/META-INF/com/google/android/aroma/langs/el.lang
@@ -57,7 +57,7 @@ welcome.text1=Είστε έτοιμος να εγκαταστήσετε
 welcome.text2=Το AROMA Installer ήταν το πρώτο και μοναδικό με Αφή και Προσαρμόσιμο ANDROID ROM Installer στον κόσμο.
 welcome.version=ΕΚΔΟΣΗ
 welcome.codename=CODENAME
-welcome.updated=UPDATED
+welcome.updated=ΕΝΗΜΕΡΩΜΕΝΟ
 welcome.next=Πιέστε Επόμενο για να Συνεχίσετε την Εγκατάσταση...
 
 terms.title=Όροι και Προϋποθέσεις
